--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^3.1.4",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
+		"autoprefixer": "^10.4.16",
+		"daisyui": "^4.0.4",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
+		"postcss": "^8.4.31",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.1.0",
+		"prettier-plugin-tailwindcss": "^0.5.7",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.3.5",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
